fix: enable seed data job

--- a/k8s/base/app/kustomization.yaml
+++ b/k8s/base/app/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
   - result-deployment.yaml
   - seed-data-config.yaml
-  # - seed-data-job.yaml
+  - seed-data-job.yaml
   - vote-deployment.yaml
   - worker-deployment.yaml
